<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/textView1"
        android:labelFor="@+id/channel_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="23dp"
        android:layout_marginTop="132dp"
        android:text="@string/channel_name" />

    <Button
        android:id="@+id/button_datePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/date_picker" />

    <TextView
        android:id="@+id/date_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_datePicker"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:text="@+id/date"
        android:visibility="invisible"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/channel_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:ems="10"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/date_display"
        android:layout_centerHorizontal="true"
        android:text="@string/search_button" />

</RelativeLayout>